--- a/index.html
+++ b/index.html
@@ -68,46 +68,48 @@
   
 </main>
 
-<div class="counter"></div>
-<footer class="section footer-classic context-dark bg-image" style="background: #2d3246;">
-        <div class="container">
+<footer class="section footer-classic context-dark bg-image">
+        <div class="container" >
           <div class="row row-30">
             <div class="col-md-4 col-xl-5">
               <div class="pr-xl-4"><a class="brand" href="index.html"><img class="brand-logo-light" src="images/agency/logo-inverse-140x37.png" alt="" width="140" height="37" srcset="images/agency/logo-retina-inverse-280x74.png 2x"></a>
-                <p>We are an award-winning creative agency, dedicated to the best result in web design, promotion, business consulting, and marketing.</p>
+                <h3>Who We Are..?</h3>
+                <p>Ascent Global Shipping is the brainchild of an experienced team who are passionate about shipping and logistics. Flexibility and ability to bring logistics solutions both in the local market and to our world-wide clients with true value for money and on-time execution formulates our core strength. </p>
                 <!-- Rights-->
                 <p class="rights"><span>©  </span><span class="copyright-year">2018</span><span> </span><span>Waves</span><span>. </span><span>All Rights Reserved.</span></p>
               </div>
             </div>
-            <div class="col-md-4">
-              <h5>Contacts</h5>
+            <div class="col-md-4" style="padding-top:40px; ">
+              <!-- <h3>Contacts</h3> -->
               <dl class="contact-list">
-                <dt>Address:</dt>
-                <dd>798 South Park Avenue, Jaipur, Raj</dd>
+                <dt><span class="glyphicon glyphicon-home">&nbsp;ADDRESS </span></dt>
+                <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
+                <dd>Chennai, Tamilnadu</dd>
               </dl>
               <dl class="contact-list">
-                <dt>email:</dt>
-                <dd><a href="mailto:#">krouotn@gmail.com</a></dd>
+                <dt><span class="glyphicon glyphicon-envelope">&nbsp; </span>E-MAIL</dt>
+                <dd><a href="mailto:#">shipping@ascent.com</a></dd>
               </dl>
               <dl class="contact-list">
-                <dt>phones:</dt>
-                <dd><a href="tel:#">+91 123456789</a> <span>or</span> <a href="tel:#">+91 123456789</a>
+                <dt><span class="glyphicon glyphicon-earphone">&nbsp; </span>PHONES:</dt>
+                <dd><a href="tel:#"> 044 4088 0000</a>
                 </dd>
               </dl>
             </div>
-            <div class="col-md-4 col-xl-3">
-              <h5>Links</h5>
-                <dl class="contact-list">
-                <dt>Address:</dt>
-                <dd>798 South Park Avenue, Jaipur, Raj</dd>
+             <div class="col-md-4" style="padding-top:40px; ">
+              <!-- <h3>Contacts</h3> -->
+              <dl class="contact-list">
+                <dt><span class="glyphicon glyphicon-home">&nbsp;ADDRESS </span></dt>
+                <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
+                <dd>Chennai, Tamilnadu</dd>
               </dl>
               <dl class="contact-list">
-                <dt>email:</dt>
-                <dd><a href="mailto:#">krouotn@gmail.com</a></dd>
+                <dt><span class="glyphicon glyphicon-envelope">&nbsp; </span>E-MAIL</dt>
+                <dd><a href="mailto:#">shipping@ascent.com</a></dd>
               </dl>
               <dl class="contact-list">
-                <dt>phones:</dt>
-                <dd><a href="tel:#">+91 123456789</a> <span>or</span> <a href="tel:#">+91 123456789</a>
+                <dt><span class="glyphicon glyphicon-earphone">&nbsp; </span>PHONES:</dt>
+                <dd><a href="tel:#"> 044 4088 0000</a>
                 </dd>
               </dl>
             </div>
