--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     transition: all 0.6s;
     }
 
-   .col-md-6{
+   .col-md-6, .container-fluid{
         padding-right: 0px;
         padding-left:0px;
     }   
@@ -134,6 +134,15 @@
             
             </div>
         </div>
+    </div>
+</div>
+
+<div class="container-fluid">
+    <div class="col-md-6" style="height: 600px;">
+        <img class="port_img" src="assets/project home.jpg" style="height: 600px; width: 100%;">
+    </div>
+    <div class="col-md-6" style="background-color: blue; height: 600px;">
+        
     </div>
 </div>
 
