--- a/index.html
+++ b/index.html
@@ -151,6 +151,20 @@
     
     cursor:pointer;
     color:#fff;
+     text-shadow: 2px 2px 2px #000000;
+}
+
+#three h2{
+    font-weight: 900;
+
+}
+
+#two h2{
+    font-weight: 900;
+}
+
+#one h2{
+    font-weight: 900;
 }
 
 #one:hover{
@@ -583,14 +597,14 @@ vertical-align:middle;
     <a href="#">
     <div class="icons">
       <div class="icon-slide-container">
-        <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/view-map.jpg">
+        <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="https://3.bp.blogspot.com/-HOHplTERenc/WOnucZfkYOI/AAAAAAAAIIo/czqEWbXSjrs/w480-h854-c/small-boat-on-the-blue-sea-galaxy-note-hd-wallpaper.jpg">
         </div>
       </div>
    </a>
     <a href="#">
       <div class="icons2">
         <div class="icon-slide-container">
-          <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/add-beach.jpg">
+          <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="https://3.bp.blogspot.com/-HOHplTERenc/WOnucZfkYOI/AAAAAAAAIIo/czqEWbXSjrs/w480-h854-c/small-boat-on-the-blue-sea-galaxy-note-hd-wallpaper.jpg">
           </div>
         </div>
       </a>
@@ -598,7 +612,7 @@ vertical-align:middle;
       <a href="#">
         <div class="icons3">
           <div class="icon-slide-container">
-            <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/view-all.jpg">
+            <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="https://3.bp.blogspot.com/-HOHplTERenc/WOnucZfkYOI/AAAAAAAAIIo/czqEWbXSjrs/w480-h854-c/small-boat-on-the-blue-sea-galaxy-note-hd-wallpaper.jpg">
             </div>
           </div>
         </a>
@@ -606,7 +620,7 @@ vertical-align:middle;
         <a href="#">
           <div class="icons4">
             <div class="icon-slide-container">
-              <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="http://thekitemap.com/images/slide/feedback.jpg">
+              <img class="slide-icon"  alt="The Kite Map Logo" height="100" src="https://3.bp.blogspot.com/-HOHplTERenc/WOnucZfkYOI/AAAAAAAAIIo/czqEWbXSjrs/w480-h854-c/small-boat-on-the-blue-sea-galaxy-note-hd-wallpaper.jpg">
               </div>
             </div>
           </a>
