text decoration agian

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
 
 
     /*------------------*/
+.main_list_box h4{
+   font-weight: 700;
+   text-shadow: 0.2 0.2 0.2 #000000;
+}
 
 .pro_cargo{
     height: 500px;
