--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
             <ul style="float:right;">
                <li><a href="" style="text-transform: lowercase;"><span class="glyphicon glyphicon-envelope">&nbsp;</span>contact@ascent.com</a></li>
                <li><a href=""><span class="glyphicon glyphicon-phone-alt"> 044-4088-0000 </a></li>
-               <li><a href=""><button class="btn btn-primary">Get a Quote</button></a></li>
+               <li><a href="getaquote.html"><button class="btn btn-primary">Get a Quote</button></a></li>
             </ul>
          </div>
          <nav>
