--- a/index.html
+++ b/index.html
@@ -156,15 +156,18 @@
 
 #three h2{
     font-weight: 900;
+    font-size: 22px;
 
 }
 
 #two h2{
     font-weight: 900;
+    font-size: 22px;
 }
 
 #one h2{
     font-weight: 900;
+    font-size: 22px;
 }
 
 #one:hover{
@@ -197,12 +200,13 @@
         overflow-x:hidden;
     }
 
-    #page-nav-bar ul{
-        text-align: center;
-    }
 
 
     /*------------------*/
+
+.html{
+    overflow-x: hidden;
+}
 .main_list_box h4{
    font-weight: 700;
    text-shadow: 0.2 0.2 0.2 #000000;
@@ -525,9 +529,6 @@ vertical-align:middle;
         <li><a href=""><span class="glyphicon glyphicon-phone-alt"> 044-4088-0000 </a></li>
 
         <li><a href="getaquote.html"><button class="btn btn-primary">Get a Quote</button></a></li>
-        
-
-        <li><a href=""><button class="btn btn-primary">Get a Quote</button></a></li>
 
       </ul>
     </div>
@@ -540,8 +541,7 @@ vertical-align:middle;
     <ul style="padding-left: 150px;">
       <li><a href="#">About</a></li>
       <li><a href="#">Services </a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
       <li><a href="#">Services </a></li>
       <li><a href="#">Portfolio</a></li>
     </ul></span>
@@ -584,17 +584,17 @@ vertical-align:middle;
           <button type="button" class="btn btn-secondary">SIX</button>
         </div> -->
     <div id="one" class="col-md-4" style="height: 100px;">
-         <h2>SECTION ONE </h2>
+         <h2>INTERNATIONAL FREIGHT MGMT </h2>
          <span class="glyphicon glyphicon-chevron-down" style="font-size: 40px;"></span>
     </div>
 
     <div id="two" class="col-md-4" style="height: 100px; ">
-        <h2>SECTION TWO</h2>
+        <h2>PROJECT CARGO WORLDWIDE </h2>
         <span class="glyphicon glyphicon-chevron-down" style="font-size: 40px;"></span>
     </div>
 
     <div id="three" class="col-md-4" style="height: 100px; ">
-        <h2>SECTION THREE</h2>
+        <h2>LINER AGENCY<p></p> </h2>
         <span class="glyphicon glyphicon-chevron-down" style="font-size: 40px;"></span>
     </div>
     
