--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <!-- End WOWSlider.com HEAD section -->
 
     <style>
-
+ul li a {
+    text-transform: uppercase;
+    color: #022638;
+}
 
 </style>
 
