--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ ul li a {
     <span class="nav_items">
     <ul style="padding-left: 150px;">
       <li><a href="#">About</a></li>
-      <li><a href="#">Services </a></li>
+      <li><a href="services.html">Services </a></li>
       <li><a href="contact.html">Contact</a></li>
       <li><a href="#">Services </a></li>
       <li><a href="#">Portfolio</a></li>
