--- a/linearagency.html
+++ b/linearagency.html
@@ -25,108 +25,17 @@
     padding: 5px;
   }
 
-  .ocean_freight ul{
-    display: inline-table;
+   .linear h4:hover{
+    background-color:#000000;
+    color:#fff;
+    padding: 7px;
   }
-
+ 
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-     font-family: 'Domine', serif;
+    font-family: 'Domine', serif;
   }
-
-  .ocean_freight h2{
-    text-align: center;
-    font-weight: 700;
-    color:#022638;
-  }
- 
-/*SideBar Nav*/
-
-@media(max-width: 400px){
-  .row_one{
-    margin-left: -50px;
-  }
-
-  .content{
-    margin-left: 70px;
-  }
-
-  .ocean_freight{
-    /*margin-left:450px;*/
-  }
-}
-
-@media(max-width: 700px){
- 
-  .ocean_freight{
-    margin-left:50px;
-  }
-
-  .ocean_freight ul{
-    margin-left: 50px;
-  }
-
-}
-
-
-.sidebar {
-  margin: 50px 70px;
-  padding: 0;
-  width: 330px;
-  background-color: #f1f1f1;
-  height: 100%;
-  overflow: auto;
-  border:2px solid #022638;
-}
-
-.sidebar a {
-  display: block;
-    color: black;
-    padding: 16px;
-    text-decoration: none;
-    /* text-align: center; */
-     text-transform: capitalize; 
-    font-size: 14px;
-    font-weight: 700;
-    border-bottom: 0px solid #000000;
-}
-
-.sidebar a.active {
-  background-color: #022638;
-  color: #fff;
-}
-
-.sidebar a:hover:not(.active) {
-  background-color:#191919;
-  color: #fff;
-}
-
-.ocean_freight li::before{
-  content:url("assets/arrow.png");
-}
-
-div.content {
-  padding: 1px 16px;
-}
-
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
 
 
 .inner-banner{
