IFM content added.

--- a/services.html
+++ b/services.html
@@ -104,25 +104,6 @@ div.content {
   padding: 1px 16px;
 }
 
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
-
-
 .inner-banner{
     height: 400px;
     background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
@@ -186,7 +167,11 @@ div.content {
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
         </div>
 
+
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
+        <h2>INTERNATIONAL FREIGHT MANAGEMENT </h2>
+        <p>Be it working as your 3PL or 4PL partner. Ascent services include total logistics management, air and ocean freight forwarding, inland ground and rail services, project cargo and project management, import/export and cross trade services, customs clearance and paper works, warehousing and distribution, global trade compliance services and logistics and technology solutions. </p>
+
         <h2>OCEAN FREIGHT</h2>
         <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
 
