--- a/insurance.html
+++ b/insurance.html
@@ -2,6 +2,9 @@
 <html lang="en" >
    <head>
       <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -40,6 +43,7 @@
 @media(max-width: 400px){
   .row_one{
     margin-left: -50px;
+    width: 100%;
   }
 
   .content{
@@ -104,25 +108,6 @@ div.content {
   padding: 1px 16px;
 }
 
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
-
-
 .inner-banner{
     height: 400px;
     background: rgba(255, 255, 255, 0.5) url('assets/FREIGHT MANAGEMENT HOME.jpg') no-repeat 0 50%;
@@ -177,7 +162,7 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar">
+        <div class="col-sm-12 col-md-5 sidebar">
           <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
@@ -202,7 +187,6 @@ div.content {
           <li>&nbsp;&nbsp;Professional cargo surveying</li>
           <li>&nbsp;&nbsp;Pre shipment inspection</li>
         </ul>
-       
       </div>
     </div>
 
