--- a/airfreight.html
+++ b/airfreight.html
@@ -11,7 +11,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -27,11 +27,9 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
-    text-align: center;
     font-weight: 700;
     color:#022638;
   }
@@ -169,7 +167,7 @@ div.content {
         </div>
 
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>AIR FREIGHT </h2>
+        <h2>Air Freight</h2>
         <p>Through our extensive network of commercial and/or charter air carriers, we can provide the most effective and efficient routing for your air cargo, as well as direct passenger and freighter flights throughout international trade lanes. Nearly any size and type of cargo are accepted – from small parcel to large project cargo, hazardous cargo and more – and can be forwarded from any origin to any destination. </p>
 
         <p>Air-freight services include:: </p>
@@ -210,7 +208,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
@@ -227,7 +225,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
