--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     
     <!-- Latest compiled and minified CSS -->
@@ -19,7 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <!-- Start WOWSlider.com HEAD section -->
 <link rel="stylesheet" type="text/css" href="assets/engine1/style.css" />
@@ -272,10 +271,10 @@ ul li a {
             <div class="col-md-4" style="padding-top:40px; ">
               <!-- <h3>Contacts</h3> -->
               <dl class="contact-list">
-                <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
-                <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
-                <dd>Chennai, Tamilnadu</dd>
-              </dl>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
+                     <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
+                     <dd>Chennai, Tamilnadu</dd>
+                  </dl>
               <dl class="contact-list">
                 <dt><span class="glyphicon glyphicon-envelope">&nbsp; </span>E-MAIL</dt>
                 <dd><a href="mailto:#">shipping@ascent.com</a></dd>
@@ -289,10 +288,10 @@ ul li a {
              <div class="col-md-4" style="padding-top:40px; ">
               <!-- <h3>Contacts</h3> -->
               <dl class="contact-list">
-                <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
-                <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
-                <dd>Chennai, Tamilnadu</dd>
-              </dl>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
+                     <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
+                     <dd>Chennai, Tamilnadu</dd>
+                  </dl>
               <dl class="contact-list">
                 <dt><span class="glyphicon glyphicon-envelope">&nbsp; </span>E-MAIL</dt>
                 <dd><a href="mailto:#">shipping@ascent.com</a></dd>
@@ -309,46 +308,7 @@ ul li a {
       </footer>
 
     <script>
-//       (function() {
 
-//   'use strict';
-
-//   var m = document.querySelector("main"),
-//     h = document.querySelector("header"),
-//     c = document.querySelector(".counter"),
-//     counter = 0,
-//     hHeight;
-
-//   function setTopPadding() {
-//     hHeight = h.offsetHeight;
-//     m.style.paddingTop = hHeight + "px";
-//   }
-
-//   function onScroll() {
-
-//     window.addEventListener("scroll", _.throttle(callbackFunc, 200));
-    
-//     function callbackFunc() {
-//       c.style.visibility = "visible";
-//       c.innerHTML = counter++;
-//       var y = window.pageYOffset;
-//       if (y > 150) {
-//         h.classList.add("scroll");
-//       } else {
-//         h.classList.remove("scroll");
-//       }
-//     }
-//   }
-
-//   window.onload = function() {
-//     setTopPadding();
-//     onScroll();
-//   };
-
-//   window.onresize = function() {
-//     setTopPadding();
-//   };
-// })();
 
     // Crate Smooth Scrolling 
 
