--- a/eventlogistic.html
+++ b/eventlogistic.html
@@ -12,7 +12,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -28,11 +28,9 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-     font-family: 'Domine', serif;
-  }
+ }
 
   .ocean_freight h2{
-    text-align: center;
     font-weight: 700;
     color:#022638;
   }
@@ -106,23 +104,6 @@ div.content {
   padding: 1px 16px;
 }
 
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
 
 
 .inner-banner{
@@ -189,7 +170,7 @@ div.content {
         </div>
 
       <div class="col-md-7 col-sm-12 content ocean_freight" class="">
-        <h2>EVENT LOGISTICS  </h2>
+        <h2>Event Logistics</h2>
         <p>Ascent’s team understand how events work, our specialist experience handling every last detail across major international venues including transportation, customs advice and on-site assistance. Whether you are an organiser, exhibitor, trade association or stand builder, you can rely on us to provide a professional and personal service, ensuring you have a trouble-free exhibition experience.
         </p>
 
@@ -212,7 +193,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
@@ -229,7 +210,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
