--- a/factoryrelocation.html
+++ b/factoryrelocation.html
@@ -12,7 +12,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -28,11 +28,9 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-     font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
-    text-align: center;
     font-weight: 700;
     color:#022638;
   }
