--- a/insurance.html
+++ b/insurance.html
@@ -3,7 +3,6 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <!-- Latest compiled and minified CSS -->
@@ -13,7 +12,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -29,11 +28,10 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-     font-family: 'Domine', serif;
-  }
+ }
 
   .ocean_freight h2{
-    text-align: center;
+    text-align: left;
     font-weight: 700;
     color:#022638;
   }
@@ -172,7 +170,7 @@ div.content {
         </div>
 
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>CARGO INSURANCE</h2>
+        <h2>Cargo Insurance</h2>
         <p>Uncertainty is common in all industry, our comprehensive cargo insurance helps you cover both loss or damage of cargo on all modes of transportation.  </p>
 
         <ul>
@@ -206,7 +204,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
@@ -223,7 +221,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
