--- a/linearagency.html
+++ b/linearagency.html
@@ -12,7 +12,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -36,7 +36,6 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    font-family: 'Domine', serif;
   }
 
 
@@ -139,7 +138,7 @@
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
@@ -156,7 +155,7 @@
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
