--- a/services.html
+++ b/services.html
@@ -12,7 +12,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -28,11 +28,9 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-    font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
-    text-align: center;
     font-weight: 700;
     color:#022638;
   }
@@ -171,10 +169,10 @@ div.content {
 
 
       <div class="ocean_freight" class="col-md-7 col-sm-12 content">
-        <h2>INTERNATIONAL FREIGHT MANAGEMENT </h2>
+        <h2>International Freight Management</h2>
         <p>Be it working as your 3PL or 4PL partner. Ascent services include total logistics management, air and ocean freight forwarding, inland ground and rail services, project cargo and project management, import/export and cross trade services, customs clearance and paper works, warehousing and distribution, global trade compliance services and logistics and technology solutions. </p>
 
-        <h2>OCEAN FREIGHT</h2>
+        <h2>Ocean Freight</h2>
         <p>Ascent offer a full range of ocean freight services direct with carrier as forwarder or as a NVOCC for any/all less-than-containerload (LCL), full-containerload (FCL), oversized and hazardous cargo, Roll-on/Roll-off (Ro/Ro) and more from any origin to any destination. </p>
 
         <p>Full services include: </p>
@@ -218,7 +216,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
@@ -235,7 +233,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
