--- a/specialequipment.html
+++ b/specialequipment.html
@@ -12,7 +12,7 @@
       <!-- Latest compiled JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <!-- font -->
-      <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
 
@@ -28,7 +28,6 @@
   .ocean_freight{
     padding:30px 40px 30px 0;
     font-size: 20px;
-     font-family: 'Domine', serif;
   }
 
   .ocean_freight h2{
@@ -189,7 +188,7 @@ div.content {
         </div>
 
       <div class="col-md-7 col-sm-12 content ocean_freight" class="">
-        <h2>SPECIAL EQUIPMENTS </h2>
+        <h2>Special Equipments </h2>
         <p>Over dimension cargo does not always need Breakbulk or conventional loading, specialised containers are used to safely lash the cargo for general liner loading, ASCENT has own special Equipments also represent other liners who owns special Equipments and offer service to various destinations. Our skilled operation team helps you to minimise the number of containers used for combination of cargo, working with cargo  size, weight, Container stability, Pay load capacity and Terminal capacity every thing in mind. 
         Containers varies from 20 and 40 Open top // High Cube Open top 20 and 40 Flat rack // Super Rack // Flat Bed
         </p>
@@ -212,7 +211,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong></span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
@@ -229,7 +228,7 @@ div.content {
                <div class="col-md-4" style="padding-top:40px; ">
                   <!-- <h3>Contacts</h3> -->
                   <dl class="contact-list">
-                     <dt><span class="glyphicon glyphicon-home">&nbsp;<strong>ADDRESS</strong> </span></dt>
+                     <dt><span class="glyphicon glyphicon-home">&nbsp; </span>ADDRESS</dt>
                      <dd>49, Poonamalle Rd, New Colony, Achugam Nagar, Ekkatuthangal, Chennai, Tamil Nadu 600015</dd>
                      <dd>Chennai, Tamilnadu</dd>
                   </dl>
