remove wow slider

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <!-- Start WOWSlider.com HEAD section -->
-<link rel="stylesheet" type="text/css" href="assets/engine1/style.css" />
-<script type="text/javascript" src="assets/engine1/jquery.js"></script>
+<link rel="stylesheet" type="text/css" href="assets/engine2/style.css" />
+<script type="text/javascript" src="assets/engine2/jquery.js"></script>
 <!-- End WOWSlider.com HEAD section -->
 
     <style>
@@ -36,7 +36,7 @@ ul li a {
 
 </head>
 
-<body translate="no"  style="background-image: url('https://cdn.pixabay.com/photo/2016/05/31/15/34/nodes-1427176_960_720.png');">
+<body translate="no">
 
   <header>
 
@@ -67,19 +67,7 @@ ul li a {
 </header>
 
 <section>
-<!-- Start WOWSlider.com BODY section -->
-<div id="wowslider-container1">
-<div class="ws_images"><ul>
-    <li><img src="assets/data1/images/liner_home.jpg" alt="LINER HOME" title="LINER HOME" id="wows1_0"/></li>
-    <li><a href="http://wowslider.net"><img src="assets/data1/images/liner_service_op1.jpg" alt="jquery carousel slider" title="LINER SERVICE OP1" id="wows1_1"/></a></li>
-    <li><img src="assets/data1/images/liner_service_op2.jpg" alt="LINER SERVICE OP2" title="LINER SERVICE OP2" id="wows1_2"/></li>
-  </ul></div>
-<div class="ws_script" style="position:absolute;left:-99%"><a href="http://wowslider.net">slideshow html code</a> by WOWSlider.com v8.8</div>
-<div class="ws_shadow"></div>
-</div>  
-<script type="text/javascript" src="assets/engine1/wowslider.js"></script>
-<script type="text/javascript" src="assets/engine1/script.js"></script>
-<!-- End WOWSlider.com BODY section -->
+
 </section>
 
 <section  style="text-align: center;
