--- a/linearservice.html
+++ b/linearservice.html
@@ -15,6 +15,49 @@
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <style>
+/*for button get a quote*/
+.cross_line{
+    display: inline-block;
+    position: relative;
+    padding: 1.5em 6em;
+    border-top: solid 2px #000;
+    border-bottom: solid 2px #000;
+    text-decoration: none;
+    font-weight: bold;
+    color: #000;
+    margin-left: 85px;
+    text-decoration: none !important;
+
+}
+#quote{
+  font-size: 20px;
+}
+
+.cross_line:before, .cross_line:after{
+  content: '';
+  position: absolute;
+  top: -7px;
+  width: 2px;
+  height: -webkit-calc(100% + 14px);
+  height: calc(100% + 14px);
+  background-color:#000;
+  transition: .8s;
+}
+.cross_line:before {left: 25px;}
+.cross_line:after {right: 25px;}
+.cross_line:hover:before{
+  top: 0px;
+  left:0;
+  height: 100%;
+}
+.cross_line:hover:after{
+  top: 0px;
+  right: 0;
+  height: 100%;
+}
+
+
+/*End*/
 
 
   html{
@@ -33,6 +76,10 @@
   .ocean_freight h2{
     font-weight: 700;
     color:#022638;
+  }
+
+  .row_one{
+    background-color: #fff;
   }
  
 /*SideBar Nav*/
