--- a/services.html
+++ b/services.html
@@ -17,66 +17,49 @@
       <style>
 
 /*Testing for button*/
-.isometric { 
-    color: #484848;
+/*for button get a quote*/
+.cross_line{
     display: inline-block;
-    height: 50px;
-    font-size: 25px;
-    line-height: 46px;
-    background: #eaeef1;
+    position: relative;
+    padding: 1.5em 6em;
+    border-top: solid 2px #000;
+    border-bottom: solid 2px #000;
     text-decoration: none;
-    box-sizing: border-box; 
-    margin: 1em;
-}
-.isometric .iconback{
-    display: inline-block;
-    width: 50px;
-    height: 50px;
-    text-align: center;
-    color: white;
-    vertical-align: middle;
-}
-.isometric span{
-    vertical-align: middle;
-}
-.isometric .iconback .fa{
-    line-height: 46px;
-    font-size:25px;
-}
-.isometric .btnttl{
-    display: inline-block;
-    width: 220px;
-    height: 50px;
-    text-align: center;
-    border-bottom: solid 4px #dcdcdc;
-    vertical-align:middle;
-}
-.isometric .istw{
-    background:#1da1f3;
-    border-bottom: solid 4px #1484ca;
-}
-.isometric .isfb{
-    background:#3b75d4;
-    border-bottom: solid 4px #2a5caf;
-}
-.isometric .isfdly{
-    background:#7ece46;
-    border-bottom: solid 4px #65b130;
-}
-.isometric .ispkt{
-    background:#fd7171;
-    border-bottom: solid 4px #ef4d4d;
-}
-.isometric:hover{
-    -ms-transform: translateY(4px);
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-}
-.isometric:hover .btnttl, .isometric:hover .iconback{
-    border-bottom: none;
-}
-/*Testing code*/
+    font-weight: bold;
+    color: #000;
+    margin-left: 85px;
+    text-decoration: none !important;
 
+}
+#quote{
+  font-size: 20px;
+}
+
+.cross_line:before, .cross_line:after{
+  content: '';
+  position: absolute;
+  top: -7px;
+  width: 2px;
+  height: -webkit-calc(100% + 14px);
+  height: calc(100% + 14px);
+  background-color:#000;
+  transition: .8s;
+}
+.cross_line:before {left: 25px;}
+.cross_line:after {right: 25px;}
+.cross_line:hover:before{
+  top: 0px;
+  left:0;
+  height: 100%;
+}
+.cross_line:hover:after{
+  top: 0px;
+  right: 0;
+  height: 100%;
+}
+
+
+/*End*/
  
     html{
     overflow-x: hidden;
@@ -161,6 +144,10 @@
   content:url("assets/dot.png");
 }
 
+.row_one{
+  background-color: #fff;
+}
+
 div.content {
   padding: 1px 16px;
 }
@@ -230,9 +217,9 @@ div.content {
           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
             <!--以下pocket-->
         </div>
-          <a href="#" class="isometric" style="text-decoration: none;">
+          <!-- <a href="#" class="isometric" style="text-decoration: none;">
               <span class="iconback ispkt"><i class="fa fa-get-pocket"></i></span><span class="btnttl">Get a Quote</span>
-          </a>
+          </a> -->
         </div>
 
          
