--- a/transport.html
+++ b/transport.html
@@ -16,11 +16,53 @@
       <link rel="stylesheet" type="text/css" href="styles/main.css">
       <link href="https://fonts.googleapis.com/css?family=Bitter" rel="stylesheet">
       <style>
+/*Testing for button*/
 
+.cross_line{
+    display: inline-block;
+    position: relative;
+    padding: 1.5em 6em;
+    border-top: solid 2px #000;
+    border-bottom: solid 2px #000;
+    text-decoration: none;
+    font-weight: bold;
+    color: #000;
+    margin-left: 85px;
+    text-decoration: none !important;
+
+}
+#quote{
+  font-size: 20px;
+}
+
+.cross_line:before, .cross_line:after{
+  content: '';
+  position: absolute;
+  top: -7px;
+  width: 2px;
+  height: -webkit-calc(100% + 14px);
+  height: calc(100% + 14px);
+  background-color:#000;
+  transition: .8s;
+}
+.cross_line:before {left: 25px;}
+.cross_line:after {right: 25px;}
+.cross_line:hover:before{
+  top: 0px;
+  left:0;
+  height: 100%;
+}
+.cross_line:hover:after{
+  top: 0px;
+  right: 0;
+  height: 100%;
+}
+
+
+/*End*/
 
   html{
     overflow-x: hidden;
-    background-color: #ffffff;
   }
 
   body{
@@ -39,6 +81,10 @@
   .ocean_freight h2{
     font-weight: 700;
     color:#022638;
+  }
+
+  .row_one{
+    background-color:#fff;
   }
  
 /*SideBar Nav*/
@@ -103,31 +149,12 @@
 }
 
 .ocean_freight li::before{
-  content:url("assets/arrow.png");
+  content:url("assets/dot.png");
 }
 
 div.content {
   padding: 1px 16px;
 }
-
-/*@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
-}*/
-
-/*@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}*/
-/*End Sidebar Nav*/
-
 
 .inner-banner{
     height: 400px;
@@ -183,20 +210,27 @@ div.content {
       </section>
 
       <div class="row row_one">
-        <div class="col-md-5 col-sm-12 sidebar">
-          <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a class="active" href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
-          <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+        <div class="col-md-5 col-sm-12 ">
+           <div class="sidebar">
+           <a  href="services.html">Ocean Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+           <a href="airfreight.html">Air Freight <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+           <a href="importexport.html">Import/Export Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+           <a class="active" href="transport.html">Transport Services <span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+           <a href="export.html">Export services<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+           <a href="insurance.html">Cargo Insurance<span class="glyphicon glyphicon-chevron-right" style="float: right;"></span></a>
+           </div>
+
+           <p><a href="getaquote.html" class="cross_line"><span id="quote"> Get a quote</span></a></p>
+
+           <!-- <p><a href="#" class="cross_line"> Get a quote</a></p> -->
+
         </div>
-
-      <div class="ocean_freight" class="col-md-7 col-sm-12 content">
+        
+      <div class="ocean_freight" class="col-md-7 col-sm-12 content" >
         <h2>Transport Services</h2>
-        <p>Ascent excels pick up and Drop service worldwide for containerised and, Over dimension Movement, with vehicles available 24/7 in all our locations and agent locations, Rail movements interstate, ounties or even inter continent, for any cargo size from small box to Mega Equipments.    </p>
+        <p>Ascent excels pick up and Drop service worldwide for containerised and, Over dimension Movement, with vehicles available 24/7 in all our locations and agent locations, Rail movements interstate, ounties or even inter continent, for any cargo size from small box to Mega Equipments.</p>
 
-       <!--  <p>Full services include: </p> -->
+        <p><b> services include:</b> </p>
 
         <ul>
           <li>&nbsp;&nbsp;One source for all of your worldwide transportation needs</li>
